Fix section gaps: increase overlap margin, deploy config for goodreviews.ch

--- a/src/components/layout/Footer.module.css
+++ b/src/components/layout/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   background: var(--color-primary);
   padding: 24px 24px 16px;
-  margin-top: -1px;
+  margin-top: -2px;
 }
 
 .top {
@@ -49,7 +49,7 @@
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -1px;
+    margin-top: -2px;
   }
 
   .logo {
