--- a/src/components/sections/Contact.module.css
+++ b/src/components/sections/Contact.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   background: var(--color-bg-white);
-  margin-top: -1px;
+  margin-top: -2px;
 }
 
 .bottomBg {
