--- a/src/components/sections/Problem.module.css
+++ b/src/components/sections/Problem.module.css
@@ -2,7 +2,7 @@
   background: var(--color-bg-grey);
   position: relative;
   z-index: 5;
-  margin-top: -1px;
+  margin-top: -2px;
 }
 
 .inner {
